Add schema group headlines resource to schema provider
