# internal/provider/schemagroupheadline_resource_sdk.go
@@ -1,0 +1,87 @@
+// Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
+
+package provider
+
+import (
+	"github.com/epilot/terraform-provider-epilot-schema/internal/sdk/models/shared"
+	"github.com/hashicorp/terraform-plugin-framework/types"
+)
+
+func (r *SchemaGroupHeadlineResourceModel) ToSharedGroupHeadlineWithCompositeIDInput() *shared.GroupHeadlineWithCompositeIDInput {
+	var id string
+	id = r.ID.ValueString()
+
+	var name string
+	name = r.Name.ValueString()
+
+	var label string
+	label = r.Label.ValueString()
+
+	layout := new(string)
+	if !r.Layout.IsUnknown() && !r.Layout.IsNull() {
+		*layout = r.Layout.ValueString()
+	} else {
+		layout = nil
+	}
+	var group string
+	group = r.Group.ValueString()
+
+	order := new(int64)
+	if !r.Order.IsUnknown() && !r.Order.IsNull() {
+		*order = r.Order.ValueInt64()
+	} else {
+		order = nil
+	}
+	typeVar := shared.GroupHeadlineWithCompositeIDType(r.Type.ValueString())
+	enableDivider := new(bool)
+	if !r.EnableDivider.IsUnknown() && !r.EnableDivider.IsNull() {
+		*enableDivider = r.EnableDivider.ValueBool()
+	} else {
+		enableDivider = nil
+	}
+	divider := new(shared.Divider)
+	if !r.Divider.IsUnknown() && !r.Divider.IsNull() {
+		*divider = shared.Divider(r.Divider.ValueString())
+	} else {
+		divider = nil
+	}
+	schema := new(string)
+	if !r.Schema.IsUnknown() && !r.Schema.IsNull() {
+		*schema = r.Schema.ValueString()
+	} else {
+		schema = nil
+	}
+	out := shared.GroupHeadlineWithCompositeIDInput{
+		ID:            id,
+		Name:          name,
+		Label:         label,
+		Layout:        layout,
+		Group:         group,
+		Order:         order,
+		Type:          typeVar,
+		EnableDivider: enableDivider,
+		Divider:       divider,
+		Schema:        schema,
+	}
+	return &out
+}
+
+func (r *SchemaGroupHeadlineResourceModel) RefreshFromSharedGroupHeadlineWithCompositeID(resp *shared.GroupHeadlineWithCompositeID) {
+	if resp != nil {
+		r.CompositeID = types.StringPointerValue(resp.CompositeID)
+		if resp.Divider != nil {
+			r.Divider = types.StringValue(string(*resp.Divider))
+		} else {
+			r.Divider = types.StringNull()
+		}
+		r.EnableDivider = types.BoolPointerValue(resp.EnableDivider)
+		r.Group = types.StringValue(resp.Group)
+		r.ID = types.StringValue(resp.ID)
+		r.Label = types.StringValue(resp.Label)
+		r.Layout = types.StringPointerValue(resp.Layout)
+		r.Name = types.StringValue(resp.Name)
+		r.Order = types.Int64PointerValue(resp.Order)
+		r.Schema = types.StringPointerValue(resp.Schema)
+		r.Type = types.StringValue(string(resp.Type))
+	}
+}
